--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ pandas==2.2.0
 matplotlib
 seaborn==0.13.2
 scikit-learn==1.5.2
-streamlit==1.3.0
+streamlit==1.33.0          # ✅ Latest stable as of May 2025
 numpy
 joblib
-protobuf<3.20.0
+protobuf>=3.20.0,<5        # ✅ Compatible with new Streamlit
 setuptools
-streamlit-nightly
 altair<5
